--- a/index.html
+++ b/index.html
@@ -177,17 +177,16 @@
                     <span class="slide-label-text">お手入れガイド</span>
                 </div>
                 <div class="content-main items-center text-center">
+                    <!-- 十字アイコンを削除し、イラストを追加 -->
                     <div class="mb-8">
-                        <svg width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#10b981" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                            <circle cx="12" cy="12" r="10"/>
-                            <path d="M12 8v8M8 12h8"/>
-                        </svg>
+                        <img src="town.png" alt="ピアスをつけて街を歩く女性のイラスト" class="w-48 h-auto mx-auto rounded-lg shadow-md">
                     </div>
                     <h2 class="text-4xl font-black text-slate-800 mb-4">正しいアフターケア</h2>
                     <p class="text-xl text-slate-500 font-medium">トラブルを防ぐために大切なことをお伝えします</p>
                 </div>
             </div>
         </div>
+
 
         <!-- スライド2: 当日の注意点は？ -->
        <div class="slide" data-duration="8000" data-text="当日の注意点です。ピアスを開けた当日は、ピアスホールを刺激しないように、パーマやプールは控えてください。">
